--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_transit_options">TransitOptions</string>
+    <string name="title_activity_get_location">GetLocation</string>
 </resources>
