--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="title_activity_get_location">GetLocation</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="blocked_contact">This Contact has Been Blocked by You</string>
+    <string name="change_contact">CHANGE THIS!</string>
+    <string name="accept_this">I ACCEPT</string>
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
