--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_transit_options">TransitOptions</string>
     <string name="title_activity_get_location">GetLocation</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="vertical_ellipsis">&#8942;</string>
 
     <string name="blocked_contact">This Contact has Been Blocked by You</string>
     <string name="change_contact">CHANGE THIS!</string>
